# Coding_agent-Implementation-from-Scratch

./: .gitignore  README.md  TODO.md  apps_desktop_src_py_lines.jsonl  docs_py_lines.jsonl  frontend-design.md  frontend-product-gap-analysis.md  frontend-product-polish-todo.md  frontend-todo-list.md  project-CodingGirl.md  pyproject.toml  pyrightconfig.json  todo list.md  tools强化.md  深度调研-实用性跃迁.md
.claude/: settings.local.json
apps/desktop/: README.md  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
codinggirl/: __init__.py  __main__.py
codinggirl/core/: coder.py  (+36 more)
docs/: README.md  architecture.html  codex-alignment.html  coding-standards.md  codinggirl-evolution-plan.md  context-compression-research.md  frontend-integration-checklist.md  getting-started.html  implementation-summary.md  index.html  optimization-plan.md  papers.html  parallel-agents-frontend-integration.md  parallel-agents-guide.md  roadmap.html  runtime-event-mapping.md  stage9-frontend-integration-plan.md  stage9-phase1-implementation-guide.md
scripts/: analyze_run.py  audit_repo.py  loc.py  scan_kinds.py
skills/: code-review.md  debugging.md  git-workflow.md  testing.md
tests/: test_agent_loop.py  test_background_manager.py  test_context_manager.py  test_event_bus.py  test_indexer_manifest_symbols.py  test_llm_adapter.py  test_orchestrator.py  test_patch_apply.py  test_policy.py  test_skill_loader.py  test_state_machine.py  test_storage_sqlite.py  test_subagent.py  test_task_graph.py  test_telegram_adapter.py  test_todo_write.py  test_tools_builtin.py  test_workspace.py
(+114 files in other folders)
