[project]
name = "codinggirl"
version = "0.0.1"
description = "Lightweight, model-agnostic coding agent core"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
codinggirl = "codinggirl.adapters.cli.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["codinggirl*"]
exclude = ["tmp*", "tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
cache_dir = "tmp/pytest_cache"
